--- a/src/components/Category/category.css
+++ b/src/components/Category/category.css
@@ -1,6 +1,11 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 .category {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    height: 70vh;
     background-color: #800000;
 
 }
@@ -21,10 +26,11 @@
 .category_box {
     display: flex;
     flex-direction: column;
-    color: #554204;
+    color: #775c04;
 }
 .category_box label{
     font-weight: 500;
+    color: #790707;
 }
 option1 {
     cursor: none;
