--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -3,7 +3,15 @@
     height:220px;
     border-radius: 5px;
     cursor: pointer;
-    border: 2px solid yellowgreen;
+    box-shadow: 10px 8px 15px 1px rgb(0, 0, 0,.7);
+}
+.img_box:hover{
+    width: 183px;
+    height: 222px;
+    box-shadow: 10px 8px 20px 1px rgb(0, 0, 0,.5);
+    border: 2px solid #ffffff;
+    font-size: large;
+
 }
 .img_box img{
     width: 100%;
@@ -13,7 +21,8 @@
 }
 .span_div{
     position: relative;
-    bottom: 23px;
+    bottom: 24px;
+    border-end-end-radius: 5px;
     background-color: rgb(250, 235, 215,.6);
     color:black;
     text-transform: capitalize;
