--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -1,6 +1,11 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 .img_box{
-    width: 180px;
-    height:220px;
+    max-width: 180px;
+    max-height:220px;
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 10px 8px 15px 1px rgb(0, 0, 0,.7);
