--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -11,6 +11,10 @@
     grid-template-columns: repeat(2,1fr);
 
 }
+.userprofile{
+    background-color: blueviolet;
+padding: 5px;
+}
 .profileName{
     /* max-width: 100vw; */
 
@@ -20,9 +24,10 @@
     
 }
 .userBooking{
-    /* background-color: aqua; */
+    background-color: aqua;
+    padding: 5px;
 }
-.usedbooedDetails{
+.usedbookedDetails{
     display: flex;
     gap: 5px;
     flex-wrap: wrap;
@@ -44,4 +49,10 @@
     width: 60px;
     height: 70px;
 }
-
+@media (max-width: 600px) {
+    .profile {
+        grid-template-columns: 1fr; 
+        grid-template-rows: repeat(2,1fr);
+        padding: 5p;
+    }
+}
