--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,58 +1,80 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 
 }
-.profile{
+
+.profile {
     max-width: 100vw;
     min-height: 70vh;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
 
 }
-.userprofile{
-    background-color: blueviolet;
-padding: 5px;
-}
-.profileName{
-    /* max-width: 100vw; */
 
+.userprofile {
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    /* color: white; */
+    border-right: 1px solid blue;
 }
-.profileName img{
+
+.userprofile h1{
+    color: brown;
+}
+.profileName img {
     width: 50px;
-    
+
 }
-.userBooking{
-    background-color: aqua;
+
+.userBooking {
+    background-color: rgb(255, 255, 255);
+    border-left: 1px solid rgb(0, 255, 115);
+
     padding: 5px;
 }
-.usedbookedDetails{
+
+.usedbookedDetails {
     display: flex;
     gap: 5px;
     flex-wrap: wrap;
 }
-.bookedDetail{
+
+.bookedDetail {
     width: 200px;
     margin-top: 5px;
-    border: 1px solid ;
+    border: 1px solid;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2px;
     border-radius: 5px;
 }
-.bookedDetail button{
+
+.bookedDetail button {
     border-radius: 5px;
 }
-.bookedimage{
+
+.bookedimage {
     width: 60px;
     height: 70px;
 }
+
 @media (max-width: 600px) {
     .profile {
-        grid-template-columns: 1fr; 
-        grid-template-rows: repeat(2,1fr);
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
         padding: 5p;
+    }
+
+    .userBooking {
+        border-top: 1px solid rgb(0, 255, 115);
+        border-left: none;
+    }
+
+    .userprofile {
+        border-bottom: 1px solid blue;
+        border-right: none;
     }
 }
