--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -38,8 +38,13 @@
 } */
 @media(max-width:369px){
     .img_box{
-        max-width: 140px;
-        max-height:180px;
+        max-width: 100px;
+        max-height:130px;
+        margin: 0 2px 2px 2px;
+    }
+    .relativeType{
+        font-size:small;
+        margin-top: 5px;
     }
 
 }
