--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 .carousel-item img{
-    height: 360px;
+    height: 400px;
     margin:0;
 
 }
@@ -12,6 +12,12 @@
     margin:0;
     border-radius:0;
     padding: 0;
+}
+@media(max-width:900px){
+    .carousel-item img{
+        width: 100vw;
+        height: 50vh;
+    }
 }
 @media(max-width:400px){
     .carousel-item img{
