--- a/src/components/DressDetails/Detail.css
+++ b/src/components/DressDetails/Detail.css
@@ -56,7 +56,7 @@
     text-transform: uppercase;
     font-weight: 500;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   
+   text-shadow: 3px 2px 4px  rgb(109, 95, 95);
 }
 .data{
     font-weight: 490;
@@ -83,6 +83,16 @@ border-radius: 5px;
     color: rgb(255, 255, 255);
     width: 100px;
     border-radius: 5px;
+}
+.starrs{
+    font-size: small;
+}
+.startValue{
+    font-size: small;
+}
+.reviews-item{
+    background-color: azure;
+    padding: 2px;
 }
 @media(max-width:300px){
     .imageBox img{
