--- a/src/components/DressDetails/Detail.css
+++ b/src/components/DressDetails/Detail.css
@@ -71,11 +71,15 @@
     flex-wrap: wrap;
 }
 .buyButton{
-    background-color: darkgreen;
+background-color:#FB641B;
 padding: 5px;
-color: wheat;
+color: white;
 width: 100px;
 border-radius: 5px;
+font: weight 300px; ;
+}
+.addCart{
+    background-color: #ff9d00;
 }
 .buyBox .Delete{
     background-color:#C0392B;
