--- a/src/components/page/home/modal.css
+++ b/src/components/page/home/modal.css
@@ -24,7 +24,7 @@
     right: 16px;
     height: 500px;
     background-color: #FEFEFE;
-    border: 4px solid;
+    border: 4px solid rgb(130, 97, 160);
     padding-bottom: 10px;
     padding-left: 5px;
 }
