--- a/src/pages/detail/item.css
+++ b/src/pages/detail/item.css
@@ -61,12 +61,20 @@
 .showspan {
     height: 20%;
     width: 100%;
-    display: flex;
+    /* background-color: blueviolet; */
+     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    padding-top: 5px;
+    padding-top: 12px;
+    font-size: small;
+}
+.it_name{
+    text-align: center;
+    font-size: .732rem;
+    width: 100%;
+    /* background-color: aquamarine; */
 }
 
 .toggle-mode {
