--- a/src/components/page/home/modal.css
+++ b/src/components/page/home/modal.css
@@ -21,7 +21,7 @@
 .info_box {
     width: 450px;
     position: relative;
-    right: 16px;
+    right: 15px;
     height: 500px;
     background-color: #FEFEFE;
     border: 4px solid rgb(130, 97, 160);
@@ -66,5 +66,10 @@
     .info_box{
         width: 90%;
         font-size: medium;
+        overflow-y: scroll;
+        
+    }
+    .info_box p{
+        font-size: small;
     }
 }
