--- a/src/components/page/home/ymbol.css
+++ b/src/components/page/home/ymbol.css
@@ -10,11 +10,46 @@
     justify-content: center;
     align-items: center;
     z-index: 100;
-    position: absolute;
+    position: fixed;
     top: 0;
     background-color: rgb(0, 0, 0);
 }
 #symbol_img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: aquamarine; */
+    width: 350px;
+}
+.boxx{
+    gap: 29px;
+}
+.E{
+    width: 60px;
+    height: 60px;
+    text-align: center;
+     font-size: 4rem;
+     font-weight: 600;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 5px;
+     padding-bottom: 7px;
+     /* box-shadow: 5px 5px 5px 5px rgb(63, 62, 62); */
+}
+.shop{
+    width: 60px;
+    height: 60px;
+    text-align: center;
+     font-size: 3rem;
+     font-weight: 600;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 5px;
+     padding-bottom: 7px;
+}
+/* #symbol_img{
   width: 300px;
   height: 300px;
   position: relative;
@@ -39,4 +74,4 @@
  color: white;
  font-style: italic;
  z-index: 1;
-}
+} */
